chore: add tap and brew updatest, info for licenses in welcome message

--- a/roles/homebrew_packages/tasks/main.yml
+++ b/roles/homebrew_packages/tasks/main.yml
@@ -33,6 +33,7 @@
     - hashicorp/tap
     - hidetatz/tap
     - homeport/tap
+    - updatest/tap https://github.com/updatest/tap.git
   when: homebrew_check.stat.exists
 
 - name: Upgrading homebrew packages
